force-app/main/default/objects/Outbound_Order__c/Outbound_Order__c.object-meta.xml
<CustomObject>
    <label>Outbound Order</label>
    <nameField>
        <displayFormat>OUT-{00000}</displayFormat>
        <label>Outbound Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>