force-app/main/default/objects/Outbound_Order__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outbound Orders</relationshipLabel>
    <relationshipName>Warehouse_Outbound_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>