force-app/main/default/objects/Outbound_Order__c/fields/External_Order_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Order_Reference__c</fullName>
    <label>External Order Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>