force-app/main/default/objects/Outbound_Order__c/fields/Required_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Required_Ship_Date__c</fullName>
    <label>Required Ship Date</label>
    <type>Date</type>
</CustomField>