force-app/main/default/objects/Outbound_Order__c/fields/Shipping_Address_Source__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Source__c</fullName>
    <label>Shipping Address Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>