force-app/main/default/objects/Outbound_Order__c/fields/Shipping_Address_Validated__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Address Validated</label>
    <type>Checkbox</type>
</CustomField>