force-app/main/default/objects/Outbound_Order__c/fields/Shipping_Address_Validated_At__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Validated_At__c</fullName>
    <label>Shipping Address Validated At</label>
    <type>DateTime</type>
</CustomField>