force-app/main/default/objects/Outbound_Order__c/fields/Shipping_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country_Code__c</fullName>
    <label>Shipping Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>