force-app/main/default/objects/Outbound_Order__c/fields/Shipping_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Longitude__c</fullName>
    <label>Shipping Longitude</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>