force-app/main/default/objects/Outbound_Order__c/fields/Shipping_Region__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Region__c</fullName>
    <label>Shipping Region</label>
    <length>80</length>
    <type>Text</type>
</CustomField>