force-app/main/default/objects/Outbound_Order__c/fields/Shipping_Validated_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Validated_Postal_Code__c</fullName>
    <label>Validated Shipping Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>