force-app/main/default/objects/Outbound_Order__c/validationRules/Required_Ship_Date_Not_Before_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Ship_Date_Not_Before_Order</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Order_Date__c)), NOT(ISBLANK(Required_Ship_Date__c)), Required_Ship_Date__c < Order_Date__c)</errorConditionFormula>
    <errorMessage>Required ship date cannot be earlier than the order date.</errorMessage>
</ValidationRule>