force-app/main/default/objects/Outbound_Order__c/validationRules/Shipping_Country_Code_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Country_Code_Format</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Shipping_Country_Code__c)), LEN(TRIM(Shipping_Country_Code__c)) != 2)</errorConditionFormula>
    <errorMessage>Shipping country code must use the two-letter ISO format, for example TR or US.</errorMessage>
</ValidationRule>